# lablink-backend

./: .coverage  .dockerignore  .gitignore  API_REFERENCE.md  Dockerfile  IMPLEMENTATION_PLAN.md  docker-compose.yml  manage.py  pyproject.toml  test_api.py  test_api_v2.py  test_superadmin_patch.py
.agents/rules/: code-hygiene.md  coding-style-guide.md  django-models.md  error-handling.md  graphql.md  logging.md  migrations.md  pydantic-models.md  python-style.md  security.md  signals.md  testing.md
.agents/skills/architect/: SKILL.md
.agents/skills/code-reviewer/: SKILL.md
.agents/skills/db/: SKILL.md
.agents/skills/db/references/: query-playbook.md  schema-introspection.sql
.agents/skills/db/scripts/: refresh_schema_snapshot.sh
.agents/skills/openapi-docs/: SKILL.md
.agents/skills/planner/: SKILL.md
.agents/skills/push/: SKILL.md
.agents/skills/solution-optimizer/: SKILL.md
.agents/workflows/: changes-analyzer.md  commit.md  implement.md  plan-md-file.md  push.md  quality.md  review-current-changes.md  review.md  skill-creator.md  squash.md  stash.md  test.md  workflow-creator.md
.claude/: db-schema.md  settings.json
.claude/agents/: architect.md  code-reviewer.md  graphql-scaffold.md  importer-scaffold.md  migration-safety.md  n1-detector.md  planner.md  solution-optimizer.md  test-generator.md
.claude/commands/: changes-analyzer.md  commit.md  complete-ticket.md  custom-compact.md  db.md  django-command.md  implement.md  list-pr-comments.md  plan-md-file.md  pr-comments.md  pr.md  push.md  quality.md  review-current-changes.md  review.md  squash.md  stash.md  sync-plugin.md  test.md  wt-complete-ticket.md
.claude/rules/: api-views.md  celery-tasks.md  code-hygiene.md  django-models.md  error-handling.md  graphql.md  logging.md  migrations.md  pydantic-models.md  python-style.md  security.md  testing.md
.claude/skills/celery-inspect/: SKILL.md
.claude/skills/db/: SKILL.md
.claude/skills/db/agents/: openai.yaml
.claude/skills/db/references/: query-playbook.md  schema-introspection.sql  thai-learning-schema.md
.claude/skills/db/scripts/: refresh_schema_snapshot.sh
.claude/skills/migration-check/: SKILL.md
.claude/skills/migration-review/: SKILL.md
.claude/skills/push/: SKILL.md
.claude/skills/push/agents/: openai.yaml
.claude/skills/reddit-fetch/: SKILL.md
.claude/skills/smart-test/: SKILL.md
.claude/skills/sync-db-schema/: SKILL.md  schema-reference.md
.claude/skills/sync-schema/: SKILL.md
.claude/skills/task-scaffold/: SKILL.md
.claude/skills/test-factory/: SKILL.md
.github/workflows/: deploy.yml
db/: backup.sh  dump_dev_db.sh  dump_dev_db_local.sh  restore_prod_db.sh  restore_prod_db_local.sh  restore_prod_db_prod.sh
db/backup_utility/: db-backup.sh  lablink-backup.env  run-backup-and-upload-to-gcs.sh  upload_to_gcs.sh
deployment/: .env.prod.example  docker-compose.prod.yml  nginx.conf
k8s/: backend.yaml  frontend.yaml  redis.yaml
src/: backfill_resend_perms.py
src/apps/ai/: admin.py  client.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
src/apps/ai/migrations/: 0001_initial.py
src/apps/appointments/: models.py  serializers.py  tests.py  urls.py  views.py
src/apps/appointments/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_remove_pending_status.py  0005_appointment_guest_name_appointment_guest_phone_and_more.py
src/apps/diagnostics/: admin.py  apps.py  models.py  serializers.py  signals.py  template_fields.py  tests.py  tokens.py  urls.py  views.py
src/apps/diagnostics/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_add_test_order_and_enhance_report.py  0005_bangladesh_workflow.py  0006_seed_bangladeshi_tests.py  0007_referringdoctor_reporttemplate.py  0008_seed_report_templates.py  0009_add_soft_delete_to_report.py  0010_gender_specific_ref_ranges.py  0011_scope_report_template_to_tenant.py  0012_report_template_nonnull_center.py  0013_report_template_enforce_constraints.py  0014_alter_report_options.py  0015_add_created_by_to_report.py  0016_fill_gender_age_ref_ranges.py  0017_digital_report_delivery.py  0018_alter_report_created_by.py  0019_seed_full_diagnostics_catalog.py  (+1 more)
src/apps/followups/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/apps/notifications/: emails.py  sms.py  tasks.py  templates.py
src/apps/payments/: gateway_serializers.py  gateway_views.py  invoice_serializers.py  invoice_views.py  models.py  notifications.py  referral_serializers.py  referral_views.py  referrer_serializers.py  referrer_services.py  referrer_views.py  serializers.py  tests.py  tests_daily_summary.py  tests_invoice.py  tests_referral.py  tests_uddoktapay.py  uddoktapay_client.py  urls.py  views.py
src/apps/subscriptions/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  subscription_gateway_views.py  tasks.py  tests.py  urls.py  views.py
src/core/: asgi.py  celery.py  exceptions.py  urls.py  wsgi.py
src/core/config/: base.py  local.py  prod.py  stg.py
src/core/tenants/: admin.py  apps.py  middleware.py  mixins.py  models.py  permissions.py  public_urls.py  public_views.py  serializers.py  signals.py  superadmin_serializers.py  superadmin_views.py  tests.py  tests_public.py  tests_superadmin.py  throttles.py  urls.py  views.py
src/core/users/: admin.py  apps.py  backends.py  models.py  serializers.py  tests.py  urls.py  views.py
src/helpers/: test_factories.py
(+99 files in other folders)
